// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error message animates being hidden 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
>
  <span
    data-radium={true}
    style={
      Object {
        "color": "#d52101",
        "display": "block",
        "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
        "fontSize": "14px",
        "lineHeight": 1.285,
        "opacity": 0,
        "transition": "opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    required field
  </span>
</div>
`;

exports[`error message can render defaults properly 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
>
  <span
    data-radium={true}
    style={
      Object {
        "color": "#d52101",
        "display": "block",
        "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
        "fontSize": "14px",
        "lineHeight": 1.285,
        "opacity": 1,
        "transition": "opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    required field
  </span>
</div>
`;
